[#13] 增加生成swagger文档
